# HyperVoxel-Engine

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: Application.h  BlockRegistry.h  Camera.h  Chunk.h  ChunkManager.h  ChunkMesher.h  GuiRenderer.h  InputHandler.h  Lighting.h  Physics.h  Player.h  Renderer.h  Shader.h  SkyRenderer.h  TerrainGenerator.h  Texture.h  TextureAtlas.h  ThreadPool.h  Window.h  World.h
shaders/: chunk.frag  chunk.vert  gui.frag  gui.vert  sky.frag  sky.vert  water.frag  water.vert
src/: BlockRegistry.cpp  Camera.cpp  Chunk.cpp  ChunkManager.cpp  ChunkMesher.cpp  GuiRenderer.cpp  Lighting.cpp  Physics.cpp  Player.cpp  Renderer.cpp  Shader.cpp  SkyRenderer.cpp  TerrainGenerator.cpp  Texture.cpp  TextureAtlas.cpp  ThreadPool.cpp  World.cpp  main.cpp
